JumpScript/tests/baselines/reference/ambientStatement1.errors.txt
tests/cases/compiler/ambientStatement1.jump(2,6): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/compiler/ambientStatement1.jump(4,20): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/ambientStatement1.jump (2 errors) ====
        declare module M1 {
        	while(true);
        	~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        
        	export var v1 = () => false;
        	              ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        }